--- a/index.html
+++ b/index.html
@@ -216,6 +216,18 @@
                                 </div>
                                 <div class="playing-bars"><div class="bar bar1"></div><div class="bar bar2"></div><div class="bar bar3"></div></div>
                             </button>
+
+                            <button id="btn-V-_O7nl0Ii0" data-video="V-_O7nl0Ii0" data-title="Aula 06: Suporte e Encerramento" data-desc="Como solicitar ajuda técnica e considerações finais sobre o uso do novo sistema." onclick="selecionarAula(this)" class="aula-item w-full flex gap-3 p-3 rounded-xl hover:bg-gray-50 dark:hover:bg-slate-800 transition text-left">
+                                <div class="w-12 h-12 bg-slate-100 dark:bg-slate-800 rounded-lg flex-shrink-0 flex items-center justify-center font-bold text-sm text-slate-700">
+                                    <span class="numero-aula">05</span>
+                                    <svg class="check-icon w-6 h-6" fill="currentColor" viewBox="0 0 20 20"><path d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"/></svg>
+                                </div>
+                                <div class="flex flex-col justify-center flex-1">
+                                    <span class="text-[10px] font-bold text-slate-400 uppercase tracking-tighter">Módulo 3</span>
+                                    <span class="text-sm font-bold dark:text-white leading-tight">Encerramento</span>
+                                </div>
+                                <div class="playing-bars"><div class="bar bar1"></div><div class="bar bar2"></div><div class="bar bar3"></div></div>
+                            </button>
                         </div>
                     </div>
                     
