atualiza o título do treinamento e o nome da Dra. Patricia Sauri Otake

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Treinamento de Sistema - Dra. Patricia Sauri Otake</title>
+    <title>Dra. Patricia S. Otake - Treinamentos</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -80,7 +80,7 @@
             <div class="flex items-center gap-3">
                 <img src="logo.png" alt="Logo Dra. Patricia Otake" class="w-12 h-12 object-contain">
                 <div>
-                    <h1 class="text-lg font-bold leading-tight uppercase tracking-widest text-brandBlue dark:text-white">Dra. Patricia Otake</h1>
+                    <h1 class="text-lg font-bold leading-tight uppercase tracking-widest text-brandBlue dark:text-white">Dra. Patricia Sauri Otake</h1>
                     <p class="text-xs text-brandAccent font-semibold uppercase tracking-tighter">Treinamento de Sistemas</p>
                 </div>
             </div>
