--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="flex items-center gap-3">
                 <img src="logo.png" alt="Logo Dra. Patricia Otake" class="w-12 h-12 object-contain">
                 <div>
-                    <h1 class="text-lg font-bold leading-tight uppercase tracking-widest text-brandBlue dark:text-white">Dra. Patricia Sauri Otake</h1>
+                    <h1 class="text-lg font-bold leading-tight uppercase tracking-widest text-brandBlue dark:text-white">Dra. Patricia S. Otake</h1>
                     <p class="text-xs text-brandAccent font-semibold uppercase tracking-tighter">Treinamento de Sistemas</p>
                 </div>
             </div>
