--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 
                 <div class="mt-6 bg-white dark:bg-darkCard p-8 rounded-2xl shadow-sm border border-gray-100 dark:border-slate-700">
                     <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-4">
-                        <h2 id="videoTitle" class="text-2xl font-bold text-brandBlue dark:text-white uppercase tracking-tight italic">Aula 01: Introdução ao Fluxo de Atendimento</h2>
+                        <h2 id="videoTitle" class="text-2xl font-bold text-brandBlue dark:text-white uppercase tracking-tight italic">Aula 01: Apresentações</h2>
                         <div class="flex items-center gap-3 bg-slate-50 dark:bg-slate-900/50 px-4 py-2 rounded-full border border-slate-100 dark:border-slate-700">
                             <span class="text-[10px] font-bold uppercase tracking-widest text-slate-500">Aula concluída</span>
                             <div class="relative inline-block w-10 align-middle select-none">
