--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="h-1 w-20 bg-brandAccent mb-5"></div>
-                    <p id="videoDesc" class="text-slate-500 dark:text-slate-400 leading-relaxed text-sm font-medium">Nesta aula explicaremos como configurar o sistema para otimizar os registros de pacientes e agendamentos clínicos.</p>
+                    <p id="videoDesc" class="text-slate-500 dark:text-slate-400 leading-relaxed text-sm font-medium">Nesta aula ...</p>
                     
                     <div class="mt-8 flex flex-wrap gap-4 justify-between border-t dark:border-slate-700 pt-6">
                         <div class="flex gap-2">
@@ -146,7 +146,7 @@
                             <p id="progressText" class="text-[10px] text-slate-400 mt-2 text-center font-bold uppercase tracking-widest text-white">0% Completo</p>
                         </div>
                         <div id="playlist-container" class="p-2 space-y-2 max-h-[400px] overflow-y-auto custom-scroll bg-white dark:bg-darkCard">
-                            <button id="btn-l1xoMq329-o" data-video="l1xoMq329-o" data-title="Aula 01: Introdução ao Fluxo de Atendimento" data-desc="Nesta aula conhecerão um pouco mais sobre mim, formações, habilidades, trabalhos e o que pretendo ensinar durante esse pequeno curso. Prepare-se para aprender tudo que o TDSnap pode proporcionar para você e seus alunos." onclick="selecionarAula(this)" class="aula-item w-full flex gap-3 p-3 rounded-xl hover:bg-gray-50 dark:hover:bg-slate-800 transition text-left border border-transparent">
+                            <button id="btn-l1xoMq329-o" data-video="l1xoMq329-o" data-title="Aula 01: Apresentações" data-desc="Nesta aula conhecerão um pouco mais sobre mim, formações, habilidades, trabalhos e o que pretendo ensinar durante esse pequeno curso. Prepare-se para aprender tudo que o TDSnap pode proporcionar para você e seus alunos." onclick="selecionarAula(this)" class="aula-item w-full flex gap-3 p-3 rounded-xl hover:bg-gray-50 dark:hover:bg-slate-800 transition text-left border border-transparent">
                                 <div class="w-12 h-12 bg-slate-100 dark:bg-slate-800 rounded-lg flex-shrink-0 flex items-center justify-center font-bold text-sm">
                                     <span class="numero-aula text-brandAccent font-black">01</span>
                                     <svg class="check-icon w-6 h-6" fill="currentColor" viewBox="0 0 20 20"><path d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"/></svg>
