--- a/index.html
+++ b/index.html
@@ -72,28 +72,28 @@
 </head>
 <body class="bg-brandBg dark:bg-darkBg text-brandBlue dark:text-slate-200 antialiased transition-colors duration-300">
 
-    <header class="bg-white dark:bg-darkCard border-b border-gray-200 dark:border-slate-700 py-4 shadow-sm sticky top-0 z-50">
-        <div class="container mx-auto px-4 flex justify-between items-center">
-            <div class="flex items-center gap-3">
-                <img src="logo.png" alt="Logo Dra. Patricia Otake" class="w-12 h-12 object-contain">
-                <div>
-                    <h1 class="text-lg font-bold leading-tight uppercase tracking-widest text-brandBlue dark:text-white">Dra. Patricia S. Otake</h1>
-                    <p class="text-xs text-brandAccent font-semibold uppercase tracking-tighter">Treinamento de Sistemas</p>
-                </div>
-            </div>
-            
-            <div class="flex items-center gap-4">
-                <button onclick="toggleDarkMode()" class="p-2 rounded-full hover:bg-slate-100 dark:hover:bg-slate-700 transition hover:scale-105" title="Alternar Tema">
-                    <svg id="moonIcon" class="w-5 h-5 block dark:hidden text-slate-500" fill="currentColor" viewBox="0 0 20 20"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"/></svg>
-                    <svg id="sunIcon" class="w-5 h-5 hidden dark:block text-yellow-400" fill="currentColor" viewBox="0 0 20 20"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zM10 15a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1z"/></svg>
-                </button>
-                <a href="https://www.otakefonoaudiologia.com.br/" class="flex items-center gap-2 text-sm font-medium text-slate-400 hover:text-brandAccent transition uppercase hover:scale-105">
-                    <span>Voltar ao Site Principal</span>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" /></svg>
-                </a>
+    <header class="bg-white dark:bg-darkCard border-b border-gray-200 dark:border-slate-700 py-3 md:py-4 shadow-sm sticky top-0 z-50">
+    <div class="container mx-auto px-4 flex justify-between items-center">
+        <div class="flex items-center gap-2 md:gap-3 min-w-0">
+            <img src="logo.png" alt="Logo" class="w-8 h-8 md:w-12 md:h-12 object-contain flex-shrink-0">
+            <div class="min-w-0">
+                <h1 class="text-xs md:text-lg font-bold leading-tight uppercase tracking-widest text-brandBlue dark:text-white truncate">Dra. Patricia Sauri Otake</h1>
+                <p class="text-[9px] md:text-xs text-brandAccent font-semibold uppercase tracking-tighter truncate">Treinamento de Sistemas</p>
             </div>
         </div>
-    </header>
+        
+        <div class="flex items-center gap-2 md:gap-4 flex-shrink-0">
+            <button onclick="toggleDarkMode()" class="p-1 md:p-2 rounded-full hover:bg-slate-100 dark:hover:bg-slate-700 transition active:scale-90" title="Alternar Tema">
+                <svg id="moonIcon" class="w-4 h-4 md:w-5 md:h-5 block dark:hidden text-slate-500" fill="currentColor" viewBox="0 0 20 20"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"/></svg>
+                <svg id="sunIcon" class="w-4 h-4 md:w-5 md:h-5 hidden dark:block text-yellow-400" fill="currentColor" viewBox="0 0 20 20"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zM10 15a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1z"/></svg>
+            </button>
+            <a href="https://www.otakefonoaudiologia.com.br/" class="flex items-center gap-1 md:gap-2 text-[10px] md:text-sm font-medium text-slate-400 hover:text-brandAccent transition uppercase" title="Voltar ao site">
+                <span class="hidden sm:inline">Voltar ao Site Principal</span>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 md:h-5 md:w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" /></svg>
+            </a>
+        </div>
+    </div>
+</header>
 
     <main class="container mx-auto mt-8 px-4 pb-12">
         <div class="flex flex-col lg:flex-row gap-8">
