atualiza ID do botão da Aula 03 para refletir nova referência de vídeo

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                                 </div>
                             </button>
 
-                            <button id="btn-kJQP7kiw5Fk" data-video="kJQP7kiw5Fk"
+                            <button id="btn-iUCsxGpZ-bw" data-video="iUCsxGpZ-bw"
                                 data-title="Aula 03: Procedimentos Clínicos"
                                 data-desc="Registrando exames e procedimentos de forma automatizada para agilizar o atendimento."
                                 onclick="selecionarAula(this)"
