atualiza ID do botão da Aula 06 para refletir nova referência de vídeo

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                                 </div>
                             </button>
 
-                            <button id="btn-V-_O7nl0Ii0" data-video="V-_O7nl0Ii0" data-title="Aula 06: Encerramento"
+                            <button id="btn-V-SM5rOFK6Wck" data-video="V-SM5rOFK6Wck" data-title="Aula 06: Encerramento"
                                 data-desc="Como solicitar ajuda técnica e considerações finais sobre o uso do novo sistema."
                                 onclick="selecionarAula(this)"
                                 class="aula-item w-full flex gap-3 p-3 rounded-xl hover:bg-gray-50 dark:hover:bg-slate-800 transition text-left">
